Gui update
Co-authored-by: EdoardoSaso <98163940+EdoardoSaso@users.noreply.github.com>